# python-glmnet

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  circle.yml  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: pypi.yml
LICENSES/: SCIKIT_LEARN_LICENSE
conda.recipe/: meta.yaml
example/: ElasticNet.ipynb
example/.ipynb_checkpoints/: ElasticNet-checkpoint.ipynb  LogitNet-checkpoint.ipynb
glmnet/: __init__.py  _glmnet.pyf  _version.py  doc.py  errors.py  linear.py  logistic.py  plotting.py  poisson.py  scorer.py  util.py
glmnet/src/glmnet/: DESCRIPTION  NOTICE  glmnet5.f90
glmnet/tests/: test_errors.py  test_linear.py  test_logistic.py  test_pandas.py  test_util.py  util.py
